--- a/ProcessProtect/ProcessProtect.vcxproj
+++ b/ProcessProtect/ProcessProtect.vcxproj
@@ -54,6 +54,7 @@
     <NMakeForcedIncludes Condition="'$(Configuration)|$(Platform)'=='x64|Win32'">$(NMakeForcedIncludes)</NMakeForcedIncludes>
     <NMakeAssemblySearchPath Condition="'$(Configuration)|$(Platform)'=='x64|Win32'">$(NMakeAssemblySearchPath)</NMakeAssemblySearchPath>
     <NMakeForcedUsingAssemblies Condition="'$(Configuration)|$(Platform)'=='x64|Win32'">$(NMakeForcedUsingAssemblies)</NMakeForcedUsingAssemblies>
+    <ReferencePath Condition="'$(Configuration)|$(Platform)'=='x64|Win32'">$(WindowsSdkDir)lib;$(ReferencePath)</ReferencePath>
   </PropertyGroup>
   <ItemDefinitionGroup>
   </ItemDefinitionGroup>
