git-svn-id: file:///DYFS/svn/xiaobai.coresvc/trunk@27 51b37809-87b3-45ef-b1a8-d8bf3bd9189a

--- a/xbSpeed/xbSpeed/xbSpeed/xbSpeed.vcxproj
+++ b/xbSpeed/xbSpeed/xbSpeed/xbSpeed.vcxproj
@@ -486,6 +486,7 @@
     <ClInclude Include="xldl.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="res\windows.ico" />
     <None Include="curl\include\curl\curlbuild.h.cmake" />
     <None Include="curl\include\curl\curlbuild.h.in" />
     <None Include="curl\include\curl\Makefile.am" />
