git-svn-id: file:///DYFS/svn/xiaobai.coresvc/trunk@28 51b37809-87b3-45ef-b1a8-d8bf3bd9189a

--- a/xbSpeed/xbSpeed/xbSpeed/xbSpeed.vcxproj.filters
+++ b/xbSpeed/xbSpeed/xbSpeed/xbSpeed.vcxproj.filters
@@ -893,6 +893,9 @@
       <Filter>curl\include</Filter>
     </None>
     <None Include="drv\ProcessProtect.sys" />
+    <None Include="res\windows.ico">
+      <Filter>资源文件</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="xbSpeed.rc">
